<resources>
    <string name="app_name">MakeYOCoffee</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="first_string_">Hello first fragment</string>
    <string name="how_coffee_grows_title">Как растет кофе</string>
    <string name="how_coffee_grows1">Прежде чем ответить на вопрос, как растет кофе, необходимо выяснить, где он растет. Исторической родиной кофе можно считать тропические и экваториальные районы Азии (в основном Индонезия), Африки и Южной Америки. На данный момент выращиванием кофе занимается примерно 50 стран, причем в каждой их них сложились свои условия, поэтому и ароматические свойства сортов получаются неповторимыми. Всего на нашей планете насчитывается порядка 6 млрд кофейных деревьев, что по площади занимает примерно 4,5 млн га.</string>
    <string name="how_coffee_grows2">Что представляет собой само растение? Это вечнозеленое дерево с овальными кожистыми листьями. В тропических лесах кофейные плантации образуют подлесок, однако деревья могут достигать высоты и 4-9 метров. Кофейное дерево, которое больше похоже на кустарник, имеет стержневой корень, прорастающий в глубину на 2,5 метра. В семействе мареновых (а именно к нему относится кофе) встречается до пяти тысяч видов и подвидов деревьев и кустов. Из них всего пятьдесят разновидностей – это сами кофейные деревья, дающие всем кофеманам и просто любителям этого культового напитка невероятно ароматный кофе. Плодоносит растение круглый год. По этой веской причине зерна собирают исключительно вручную.</string>
    <string name="how_coffee_grows3">Как растет кофе? Нужно отметить – довольно необычно. Листья, темно-зеленые, блестящие обычно сохраняются на дереве до четырех лет. В пазухах листьев «прячутся» благоухающие цветы белого цвета, внешне напоминающие жасмин. Плоды похожи на вишню и отличаются насыщенным красным или черно-синим оттенком. Внутри кофе есть два плоско-выпуклых семени, одетые в роговую оболочку и покрытые серебристой кожицей. Это и есть зерна кофейного дерева, виновники кофейного торжества! Намного реже встречается только одно семя. Такие ценные зерна называются «жемчужными». Обычно их собирают отдельно. Знатоки дела утверждают, что сваренный из них кофе отличается отменным вкусом. Вообще, плоды кофе невероятно полезны благодаря высокому содержанию витамина С, антиоксидантов и большому количеству полезных для организма биологических соединений.</string>
    <string name="how_coffee_grows4">Земля, на которой произрастают кофейные деревья, должна быть в меру плодородной – слишком насыщенная почва может привести к быстрому созреванию зерен, а в результате – к ухудшению качества кофе. Кофейные деревья сильно зависят от климатических условий. В идеале температура воздуха должна варьироваться от 17 до 23 градусов. При температуре ниже 8˚С дерево может погибнуть. Поэтому кофе и не культивируется в Европе. Осадки тоже играют важную роль. Как ни странно, но избыток солнца отрицательно влияет на, казалось бы, теплолюбивое растение. Чтобы уберечь деревья от солнечного света, на кофейных угодьях обычно сажают деревья – эритриты. Плодоносный цикл кофейного дерева, во время которого можно получить большой урожай зерен, длится примерно пятнадцать лет, хотя плодоносят деревья почти шестьдесят лет. Одно деревце способно дать до 3 кг кофе в год.</string>
    <string name="how_coffee_grows5">Есть смысл подробнее рассмотреть такие сорта кофе, как робуста и арабика, поскольку они наиболее известны не только знатокам напитка, но и любителям. Большая часть деревьев, растущих на кофейных угодьях, относятся к подвидам, как арабика (он же аравийский). Как правило, это невысокие деревья, достигающие в высоту в среднем пяти метров. Однако если за ними не ухаживать, то они могут вырасти до девяти метров. А такой расклад зачастую приводит к уменьшению урожайности. По этой причине с целью облегчить уход за кофейными деревьями, обычно культивируют исключительно высокие деревца. Арабика, как правило, произрастает на высоте 900 метров над уровнем моря. Это достаточно капризный сорт кофе. 75% кофе изготавливают из арабики. Зерна аравийского кофе придают напитку неповторимый и в то же время необычный вкус с небольшой кислинкой. Сорт кофе арабика зреет в среднем 8-9 месяцев, а робуста – 10-11. В зависимости от климата, географического положения, сезона в том или ином районе и высоты над уровнем моря время сбора урожая зерен различается. Например, в Африке плоды кофе собирают с конца октября до апреля, в Бразилии - с мая по сентябрь, а в Центральной Америке – с октября по март. Зерна робусты, появляющиеся скорее после опыления, созревают спустя 9-11 месяцев, арабики – 5-8 месяцев. По форме сорта робусты и арабики тоже различаются – в первом случае они более круглые и мелкие, чем плоды аравийского кофе, которые отличаются волнистым разрезом и овальной формой. В робусте содержится больше кофеина, и этот подвид менее капризен. Зачастую его используют как добавку к другим сортам кофе, однако это не умоляет его вкусовых качеств, поскольку даже скептики и знатоки дела признали, что все зависит от того, в каком регионе он вырос. Однако стоит признать, что в качестве самостоятельного кофейного напитка его почти не используют.</string>
    <string name="how_coffee_grows6">А теперь полезная информация для тех, кто хочет попробовать вырастить кофе в домашних условиях. Несмотря на то что кофейное дерево – растение теплолюбивое, его можно культивировать (или по крайней мере попробовать это сделать) и в наших широтах, а точнее – у себя дома. В таких условиях кофейное дерево достигает полутора метра, поэтому оно не будет проблемой даже в помещении с низким потолком. Если у Вас возникло довольно смелое желание развести кофе в домашних условиях, причем в больших количествах, то необходимо обратить внимание на возраст растения – чем больше его возраст, тем меньше вероятности, что кофейные зерна прорастут. Если высадить сто зерен, прорасти смогут лишь единицы. В первый год кофейное дерево обычно вырастает примерно на 15-25 см. Созревшие зерна похожи на небольшие вишни, а мякоть их очень даже съедобная. Внутри ягоды есть два зеленых зерна, их и нужно обжарить, тогда Вы сможете насладиться неповторимым вкусом домашнего кофе.</string>
    <string name="coffee_myths_title">Мифы о кофе</string>
    <string name="coffee_myths0">Самый противоречивый напиток, о котором ходит множество слухов, – это кофе. Его не пьют только ярые противники, на слух и запах не переносящие намека на кофе. Никто не остался равнодушным к этому древнему зелью, бодрящему и согревающему. Существует огромное множество рецептов его приготовления, так что каждый человек может насладиться кофе по своему вкусу. Если Вы привыкли начинать утро с чашечки этого напитка, пора разобраться, где мифы о кофе, а где правда.</string>
    <string name="coffee_myths_subtitle1">Кофеин вызывает привыкание</string>
    <string name="coffee_myths1">Это не так. Конечно, если Вы ежедневно употребляете несколько чашек кофе в день, а потом резко прекращаете его пить, Вы действительно ощутите недомогание, возможны головные боли, вспышки раздражительности. Однако подобный эффект будет наблюдаться с прекращением любого продукта, который Вы будете употреблять так же часто, как например, сахар или мясо. Рекомендуется постепенно снижать дозу кофе до общепринятой. Кстати, в медицине кофеин широко используется в качестве составляющей для лекарств, поскольку он усиливает их действие.</string>
    <string name="coffee_myths_subtitle2">Кофе вызывает остеопороз и рак</string>
    <string name="coffee_myths2">Ученые отрицают тот факт, что кофе может стать причиной развития опухолей и рака груди у женщин. Что касается остеопороза, этот миф о кофе имеет правдивую основу. Кофеин действительно участвует в вымывании кальция из организма, вследствие чего кости становятся хрупкими, однако стакан молока в день спасет Вас от этой напасти. И это несмотря на то, что молоко – не самый богатый кальцием продукт! Немного сыра или орехов, чтобы восполнить потерянный кальций от чашки кофе, и Ваш организм сыт и доволен.</string>
    <string name="coffee_myths_subtitle3">Кофе влияет на сердце</string>
    <string name="coffee_myths3">Миф о кофе, от которого учащается сердцебиение, имеет некоторые основания. На самом деле одна чашка кофе не поднимет давление даже на тот уровень, на который оно поднимается от физических упражнений, например подъема по лестнице. Другое дело, если Вы пьете одну чашку за другой, тогда Вы получите не только временно возросшее артериальное давление, но и неприятные последствия со стороны ЖКТ. Кроме того, намекнем, что кофе обладает легким мочегонным эффектом: не увлекайтесь, все хорошо в меру. Что касается того, что кофе поднимает уровень холестерина в крови, – это расхожее заблуждение.</string>
    <string name="coffee_myths_subtitle4">Кофе вреден для беременных</string>
    <string name="coffee_myths4">Напомним, что кофеин содержится и в чае, и в шоколаде, поэтому назвать кофе вредным для беременных, значит сказать им, что им также вредно пить чай. Конечно, стоит сократить количество кофеина, если женщина находится в положении, поскольку кофе способствует выработке гормонов стресса, а тревоги не идут на пользу будущей маме. Кроме того, беременным женщинам и без кофе приходится переходить на питание, обогащенное кальцием, ввиду формирования нового организма.</string>
    <string name="coffee_myths_subtitle5">Кофе без кофеина теряет вкусовые свойства</string>
    <string name="coffee_myths5">Если Вы хотя бы раз пробовали кофе без кофеина, то поймете, что это не так. Кофеин удаляется из еще зеленых бобов и не влияет на вкус. Отличный выход для тех, кто не может позволить себе пить кофе, но отказаться от этого напитка не хочет.</string>
    <string name="coffee_myths_subtitle6">Кофе помогает бороться с алкоголем в крови</string>
    <string name="coffee_myths6">Это не так. Более того, ни в коем случае нельзя пить кофе, находясь в состоянии алкогольного опьянения. Кофе ненамного повышает артериальное давление, но если Вы выпьете его после изрядной доли алкоголя, эта малость может стать чрезмерной нагрузкой на сердце.</string>
    <string name="coffee_myths_subtitle7">От кофе появляется целлюлит</string>
    <string name="coffee_myths7">Эти мифы о кофе касаются женщин, так заботящихся о своей внешности. Они берут свое начало в мочегонном эффекте кофе. Напомним, эффект этот слабый, для того чтобы кофе вызвал обезвоживание клеток, пить его придется долго. Вы раньше получите тревожный звоночек от организма о том, что пора прекратить его пить, чем допьетесь до целлюлита. По иронии жизни скраб из молотого кофе используется для борьбы с этой напастью. Считается, что его применение ускоряет метаболизм и улучшает кровообращение в тканях. К слову, кофеин добавляют в антивозрастные кремы, они сглаживают поверхность кожи, уменьшая видимость недостатков.</string>
    <string name="coffee_myths_subtitle8">Если кофе не вреден, он, по крайней мере, бесполезен</string>
    <string name="coffee_myths8">Этот миф о кофе остается мифом. Одна чашка кофе действительно бодрит и способствует улучшению концентрации. Кроме того, кофеин является природным антиоксидантом, а значит, защищает клетки организма от разрушающего воздействия свободных радикалов. Омоложения при этом не происходит, но снижается риск сердечных приступов и развития рака.
На самом деле полезное действие кофеина на организм вовсю изучается на данный момент. Уже доказана его польза при лечении астмы и аллергии.

Если кофе не вреден, он, по крайней мере, бесполезен

Еще многое можно сказать об этом противоречивом напитке, но, регулярно употребляя кофе, нужно помнить лишь одно: во всем нужна умеренность. Будьте здоровы и наслаждайтесь кофе!</string>
</resources>